# RE_Kenshi_Extensions

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
DebugMod/: CMakeLists.txt
DebugMod/Src/: DllMain.cpp
EscortLib/: CMakeLists.txt
EscortLib/Include/: Escort.h
EscortLib/Src/: Escort.cpp
ExampleMods/InventoryRotation/: kenshi_main.lua
ModLoader/: CMakeLists.txt
ModLoader/Include/: Hook.h  KenshiLibHelper.h  LoadedMod.h  LuaBridgeSetup.h  ModLoader.h
ModLoader/Src/: DllMain.cpp  Hook.cpp  KenshiLibHelper.cpp  LoadedMod.cpp  LuaBridgeSetup.cpp  LuaBridgeSetupImplementation.cpp  ModLoader.cpp
cmake_templates/: DebuggerAttach.vcxproj.user.template
